add_executable(shadow WIN32 main.cpp)
set_target_properties(shadow PROPERTIES RUNTIME_OUTPUT_DIRECTORY .)
set_target_properties(shadow PROPERTIES OUTPUT_NAME shadow)
set(SHADOW_LIBS kgl)
find_package(OpenGL REQUIRED)
if (OPENGL_FOUND)
    set(SHADOW_LIBS ${SHADOW_LIBS} ${OPENGL_LIBRARIES})
endif (OPENGL_FOUND)

target_link_libraries(shadow ${SHADOW_LIBS})
